# gcp-agentic-security-controls-poc

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: create_model_armor_template.py  deploy_agent.py  enable_threat_detection.sh  grant_agent_iam.py  red_team_scenarios.py  setup_cloud_armor.sh  setup_env.ps1  setup_env.sh
security_agent/: .agent_engine_config.json  __init__.py  agent.py  instructions.py  requirements.txt  security_config.py
security_agent/guards/: __init__.py  model_armor_guard.py
security_agent/tools/: __init__.py  customer_data.py  dlp_inspect.py
