[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "security-agent"
version = "0.1.0"
description = "GCP Agentic Security Controls POC ADK agent"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["security_agent*"]
